# cvision

./: .gitignore  edge_detection.ipynb
calibration/: CMakeLists.txt  calibration.cpp  calibration.hpp  main.cpp
filters/: CMakeLists.txt  color_filter.cpp  filters.py  fourier_transform.ipynb  gaussian_pyramid.cpp  hog.ipynb  main_filer.py  main_threshold.py  queen.cpp  salt_pepper.cpp  smoothing.cpp  threshold.cpp
